# califications_CUD

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Teachers Data Model Planning.txt  rest tests.txt
.cargo/: config.toml
src/: main.rs
src/api/: rest.rs
src/models/: courses.rs
src/repository/: mongodb.rs
